WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
187410
[Web Animations] A number of tests report an incorrect computed offset
https://bugs.webkit.org/show_bug.cgi?id=187410
Summary
[Web Animations] A number of tests report an incorrect computed offset
Antoine Quint
Reported
2018-07-06 13:44:43 PDT
[Web Animations] A number of tests report an incorrect computed offset
Attachments
Patch
(17.68 KB, patch)
2018-07-06 13:48 PDT
,
Antoine Quint
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2018-07-06 13:45:15 PDT
<
rdar://problem/41905790
>
Antoine Quint
Comment 2
2018-07-06 13:48:30 PDT
Created
attachment 344450
[details]
Patch
Dean Jackson
Comment 3
2018-07-08 20:43:29 PDT
Comment on
attachment 344450
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=344450&action=review
> Source/WebCore/animation/KeyframeEffectReadOnly.cpp:-144 > - if (indexOfLastKeyframeWithNonNullOffset == i - 1) > - continue;
I guess you could have just made this: if (indexOfLastKeyframeWithNonNullOffset == i - 1) { indexOfLastKeyframeWithNonNullOffset = i; continue; }
WebKit Commit Bot
Comment 4
2018-07-08 21:10:47 PDT
Comment on
attachment 344450
[details]
Patch Clearing flags on attachment: 344450 Committed
r233632
: <
https://trac.webkit.org/changeset/233632
>
WebKit Commit Bot
Comment 5
2018-07-08 21:10:49 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug