[Web Animations] A number of tests report an incorrect computed offset https://bugs.webkit.org/show_bug.cgi?id=187410 <rdar://problem/41905790>

Patch by Antoine Quint <graouts@apple.com> on 2018-07-08
Reviewed by Dean Jackson.

LayoutTests/imported/w3c:

Mark 16 new WPT progressions.

* web-platform-tests/web-animations/interfaces/Animatable/animate-expected.txt:
* web-platform-tests/web-animations/interfaces/KeyframeEffect/constructor-expected.txt:
* web-platform-tests/web-animations/interfaces/KeyframeEffect/processing-a-keyframes-argument-001-expected.txt:
* web-platform-tests/web-animations/interfaces/KeyframeEffect/setKeyframes-expected.txt:

Source/WebCore:

While we would correctly avoid computing missing offsets when processing the first keyframe following the last
keyframes with a specified offset, we were forgetting to update the index of the last keyframe with a specified
offset which meant we would accidentally override a specified offset with an automically-computed one.

* animation/KeyframeEffectReadOnly.cpp:
(WebCore::computeMissingKeyframeOffsets):

Canonical link: https://commits.webkit.org/202696@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@233632 268f45cc-cd09-0410-ab3c-d52691b4dbfc